--- a/AI/utils/notebooks/arima.ipynb
+++ b/AI/utils/notebooks/arima.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "aa420d8c",
    "metadata": {},
    "outputs": [],
@@ -15,57 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "065579b5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yetersiz veri: AGM G2 Guardian 256 GB (atlandı)\n",
-      "Yetersiz veri: Honor Magic 7 Pro 512 GB (atlandı)\n",
-      "Yetersiz veri: Honor Magic V2 512 GB (atlandı)\n",
-      "Yetersiz veri: Honor Magic V3 512 GB (atlandı)\n",
-      "Yetersiz veri: Huawei M Pen Lite Kalem Matepad Se Tablet Kalemi (Huawei Türkiye Garantili) (atlandı)\n",
-      "Yetersiz veri: Huawei Pura 70 Ultra 512 GB (atlandı)\n",
-      "Yetersiz veri: Nubia Red Magic 9S Pro 512 GB 16 GB Gümüş (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S22 Ultra 256 GB 12 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S23 Ultra 256 GB 12 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S23 Ultra 512 GB 12 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S24 Ultra 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S25 Plus 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S25 Ultra 1 TB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy S25 Ultra 512 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Flip 5 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Flip 5 512 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Flip 6 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Flip 6 512 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Fold 4 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Fold 5 512 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Fold 6 256 GB (atlandı)\n",
-      "Yetersiz veri: Samsung Galaxy Z Fold 6 512 GB (atlandı)\n",
-      "Yetersiz veri: Tecno Phantom V Fold 2 512 GB (atlandı)\n",
-      "Yetersiz veri: Ulefone Armor 27T Pro 256 GB (atlandı)\n",
-      "Yetersiz veri: Vivo X100 Pro 512 GB (atlandı)\n",
-      "Yetersiz veri: Vivo X200 Pro 512 GB (atlandı)\n",
-      "Yetersiz veri: Xiaomi 14 Ultra 512 GB (atlandı)\n",
-      "Yetersiz veri: Xiaomi 14T Pro 1 TB (atlandı)\n",
-      "Yetersiz veri: Xiaomi 15 UItra 512 GB (atlandı)\n",
-      "Yetersiz veri: Xiaomi MIX Flip 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 12 Pro Max 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 13 Pro Max 256 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 14 Plus 256 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 14 Plus 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 14 Pro Max 128 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 14 Pro Max 256 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 14 Pro Max 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 15 Pro Max 1 TB (atlandı)\n",
-      "Yetersiz veri: iPhone 15 Pro Max 256 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 15 Pro Max 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 16 Plus 512 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 16 Pro Max 256 GB (atlandı)\n",
-      "Yetersiz veri: iPhone 16 Pro Max 512 GB (atlandı)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'csv/akakce.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      7\u001b[39m warnings.filterwarnings(\u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcsv/akakce.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m df[\u001b[33m\"\u001b[39m\u001b[33mPrice\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33mPrice\u001b[39m\u001b[33m\"\u001b[39m].apply(\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mstr\u001b[39m(x).replace(\u001b[33m\"\u001b[39m\u001b[33m TL\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m).split(\u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m)[\u001b[32m0\u001b[39m].replace(\u001b[33m\"\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     13\u001b[39m )\n\u001b[32m     14\u001b[39m df[\u001b[33m\"\u001b[39m\u001b[33mPrice\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33mPrice\u001b[39m\u001b[33m\"\u001b[39m].astype(\u001b[38;5;28mint\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[39m, in \u001b[36mread_csv\u001b[39m\u001b[34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[39m\n\u001b[32m   1013\u001b[39m kwds_defaults = _refine_defaults_read(\n\u001b[32m   1014\u001b[39m     dialect,\n\u001b[32m   1015\u001b[39m     delimiter,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1022\u001b[39m     dtype_backend=dtype_backend,\n\u001b[32m   1023\u001b[39m )\n\u001b[32m   1024\u001b[39m kwds.update(kwds_defaults)\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:620\u001b[39m, in \u001b[36m_read\u001b[39m\u001b[34m(filepath_or_buffer, kwds)\u001b[39m\n\u001b[32m    617\u001b[39m _validate_names(kwds.get(\u001b[33m\"\u001b[39m\u001b[33mnames\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    619\u001b[39m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m620\u001b[39m parser = \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    622\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[32m    623\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1620\u001b[39m, in \u001b[36mTextFileReader.__init__\u001b[39m\u001b[34m(self, f, engine, **kwds)\u001b[39m\n\u001b[32m   1617\u001b[39m     \u001b[38;5;28mself\u001b[39m.options[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m] = kwds[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m   1619\u001b[39m \u001b[38;5;28mself\u001b[39m.handles: IOHandles | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1620\u001b[39m \u001b[38;5;28mself\u001b[39m._engine = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1880\u001b[39m, in \u001b[36mTextFileReader._make_engine\u001b[39m\u001b[34m(self, f, engine)\u001b[39m\n\u001b[32m   1878\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[32m   1879\u001b[39m         mode += \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1880\u001b[39m \u001b[38;5;28mself\u001b[39m.handles = \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1881\u001b[39m \u001b[43m    \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1882\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1883\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1884\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcompression\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1885\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmemory_map\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory_map\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1886\u001b[39m \u001b[43m    \u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m=\u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1887\u001b[39m \u001b[43m    \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding_errors\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstrict\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1888\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstorage_options\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1889\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1890\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m.handles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1891\u001b[39m f = \u001b[38;5;28mself\u001b[39m.handles.handle\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\EXCALIBUR\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\common.py:873\u001b[39m, in \u001b[36mget_handle\u001b[39m\u001b[34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[39m\n\u001b[32m    868\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m    869\u001b[39m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[32m    870\u001b[39m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[32m    871\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ioargs.encoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs.mode:\n\u001b[32m    872\u001b[39m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m873\u001b[39m         handle = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m    874\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    875\u001b[39m \u001b[43m            \u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    876\u001b[39m \u001b[43m            \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    877\u001b[39m \u001b[43m            \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    878\u001b[39m \u001b[43m            \u001b[49m\u001b[43mnewline\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    879\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    880\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    881\u001b[39m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[32m    882\u001b[39m         handle = \u001b[38;5;28mopen\u001b[39m(handle, ioargs.mode)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'csv/akakce.csv'"
      ]
     }
    ],
@@ -78,35 +45,28 @@
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Veriyi yükle\n",
     "df = pd.read_csv(r\"csv/akakce.csv\")\n",
     "\n",
-    "# Fiyat sütununu temizle\n",
     "df[\"Price\"] = df[\"Price\"].apply(\n",
     "    lambda x: int(str(x).replace(\" TL\", \"\").split(\",\")[0].replace(\".\", \"\"))\n",
     ")\n",
     "df[\"Price\"] = df[\"Price\"].astype(int)\n",
     "\n",
-    "# Tarih sütununu dönüştür\n",
     "df[\"Date\"] = pd.to_datetime(df[\"Date\"], format=\"%d.%m.%Y\", errors=\"coerce\")\n",
     "\n",
-    "# Aynı ürün ve aynı tarih varsa sadece bir tanesini tut\n",
     "df = df.sort_values([\"Product Name\", \"Date\"])\n",
     "df = df.drop_duplicates(subset=[\"Product Name\", \"Date\"]).reset_index(drop=True)\n",
     "\n",
-    "# Ürün isimlerini al\n",
     "product_names = df[\"Product Name\"].unique()\n",
     "\n",
-    "# Tahminlerin kaydedileceği klasör\n",
     "output_dir = \"predictions\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Her ürün için döngü\n",
     "for product in product_names:\n",
     "    product_df = df[df[\"Product Name\"] == product].sort_values(\"Date\")\n",
     "\n",
     "    if len(product_df) < 10:\n",
-    "        print(f\"Yetersiz veri: {product} (atlandı)\")\n",
+    "        print(f\"Insufficient data: {product} (atlandı)\")\n",
     "        continue\n",
     "\n",
     "    try:\n",
@@ -116,12 +76,12 @@
     "\n",
     "        # Grafik\n",
     "        plt.figure(figsize=(10, 5))\n",
-    "        plt.plot(product_df[\"Date\"], product_df[\"Price\"], label=\"Gerçek Fiyat\")\n",
+    "        plt.plot(product_df[\"Date\"], product_df[\"Price\"], label=\"Real price\")\n",
     "        future_dates = pd.date_range(\n",
     "            start=product_df[\"Date\"].iloc[-1], periods=6, freq=\"D\"\n",
     "        )[1:]\n",
-    "        plt.plot(future_dates, forecast, label=\"Tahmin\", color=\"red\", marker=\"o\")\n",
-    "        plt.title(f\"{product} - 5 Günlük Fiyat Tahmini\")\n",
+    "        plt.plot(future_dates, forecast, label=\"Estimation\", color=\"red\", marker=\"o\")\n",
+    "        plt.title(f\"{product} - Price Prediction for 5 days\")\n",
     "        plt.xlabel(\"Tarih\")\n",
     "        plt.ylabel(\"Fiyat (TL)\")\n",
     "        plt.xticks(rotation=45)\n",
@@ -129,14 +89,13 @@
     "        plt.grid(True)\n",
     "        plt.tight_layout()\n",
     "\n",
-    "        # Kaydet\n",
     "        filename = f\"{output_dir}/{product.replace(' ', '_')}_forecast.png\"\n",
     "        plt.savefig(filename)\n",
     "        plt.close()\n",
-    "        print(f\"Tahmin grafiği kaydedildi: {filename}\")\n",
+    "        print(f\"Estimation graph was saved: {filename}\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Hata oluştu ({product}): {e}\")"
+    "        print(f\"An error occurred ({product}): {e}\")"
    ]
   },
   {
@@ -183,15 +142,15 @@
     "model = KNeighborsRegressor(n_neighbors=4)\n",
     "model.fit(X, y)\n",
     "\n",
-    "yeni_telefon = pd.DataFrame({\n",
+    "new_phone = pd.DataFrame({\n",
     "    'RAM': [1],\n",
     "    'Storage': [190],\n",
     "    'Display': [5.2],\n",
     "    'Camera': [2]\n",
     "})\n",
     "\n",
-    "tahmin = model.predict(yeni_telefon)\n",
-    "print(f\"Estimation price: {tahmin[0]:.2f} TL\")\n",
+    "prediction = model.predict(new_phone)\n",
+    "print(f\"Estimation price: {prediction[0]:.2f} TL\")\n",
     "corr = data.corr()\n",
     "\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -257,12 +216,12 @@
     "model = KNeighborsRegressor(n_neighbors=4)\n",
     "model.fit(X, y)\n",
     "\n",
-    "yeni_telefon = pd.DataFrame(\n",
+    "new_phone = pd.DataFrame(\n",
     "    [{\"ram\": 700, \"storage\": 1024, \"display_size\": 6.2, \"weight\": 199.0}]\n",
     ")\n",
     "\n",
-    "tahmin = model.predict(yeni_telefon)\n",
-    "print(f\"Estimation price: {tahmin[0]:.2f} USD\")\n",
+    "prediction = model.predict(new_phone)\n",
+    "print(f\"Estimation price: {prediction[0]:.2f} USD\")\n",
     "\n",
     "\n",
     "numeric_df = df.select_dtypes(include=[float, int])\n",
