--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -26,13 +26,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\filterPhone.csv\")\n",
     "print(\"İlk 10 satır:\")\n",
     "print(df.head(10))\n",
     "print(\"\\n\" + \"=\" * 50 + \"\\n\")\n",
     "\n",
-    "# Birleştirilecek kolonlar\n",
     "columns_to_concat = [\n",
     "    \"storage\",\n",
     "    \"ram\",\n",
@@ -50,41 +48,32 @@
     "    \"ppi_density\",\n",
     "]\n",
     "\n",
-    "# Yeni DataFrame oluştur\n",
     "result_df = pd.DataFrame(columns=[\"productID\", \"Product Name\", \"description\"])\n",
     "\n",
-    "# Her satır için işlem yap\n",
     "for index, row in df.iterrows():\n",
-    "    # Boş olmayan değerleri key:value formatında birleştir\n",
     "    description_parts = []\n",
     "\n",
     "    for col in columns_to_concat:\n",
-    "        if col in df.columns:  # Kolon varsa\n",
+    "        if col in df.columns:  \n",
     "            value = row[col]\n",
-    "            # NaN, None veya boş değilse ekle\n",
     "            if pd.notna(value) and str(value).strip() != \"\":\n",
     "                description_parts.append(f\"{col}:{value}\")\n",
     "\n",
-    "    # Tüm parçaları birleştir\n",
     "    description = \";\".join(description_parts)\n",
     "\n",
-    "    # Phone model değerini al\n",
     "    phone_model = (\n",
     "        row[\"phone_model\"]\n",
     "        if \"phone_model\" in df.columns and pd.notna(row[\"phone_model\"])\n",
     "        else \"\"\n",
     "    )\n",
     "\n",
-    "    # Yeni DataFrame'e ekle\n",
     "    result_df.loc[index] = [\n",
     "        index + 1,\n",
     "        phone_model,\n",
     "        description,\n",
-    "    ]  # Corrected column order\n",
+    "    ]\n",
     "\n",
-    "    # İlk 5 sonucu göster (test için)\n",
     "\n",
-    "# CSV olarak kaydet\n",
     "output_path = (\n",
     "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\products_descriptions.csv\"\n",
     ")\n",
@@ -122,17 +111,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
     "df = pd.read_csv(input_filename)\n",
     "\n",
-    "# \"Fiyatı\" kolonu hariç diğer tüm kolon adlarını al\n",
     "columns_except_fiyat = [col for col in df.columns if col != 'Price']\n",
     "\n",
-    "# Bu kolonlara göre tekrar eden satırları kaldır\n",
     "unique_df = df.drop_duplicates(subset=columns_except_fiyat)\n",
     "\n",
-    "# Yeni CSV dosyasını kaydet\n",
     "output_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\withoutDuplicatePrice.csv'\n",
     "unique_df.to_csv(output_filename, index=False)\n",
     "\n",
@@ -148,14 +133,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "input_filename = r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LstmPriceHistory.csv\"\n",
     "df = pd.read_csv(input_filename)\n",
     "\n",
-    "# İndeksi 1'den başlat\n",
     "df.index = range(1, len(df) + 1)\n",
     "\n",
-    "# CSV'ye yaz\n",
     "df.to_csv(input_filename, index=True)\n",
     "\n",
     "print(len(df))\n"
@@ -195,19 +177,17 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "# CSV'yi oku\n",
     "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMPriceHistory.csv\")\n",
     "\n",
     "df[\"ProductName\"] = df[\"ProductName\"].apply(lambda x: re.sub(r'[\\/:*?\"<>|]', ' ', x))\n",
     "\n",
-    "# Sonuçları kontrol et\n",
     "print(df[\"ProductName\"].head())\n",
     "df.to_csv(\"LSTMPriceHistory.csv\",index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "086da3ea",
    "metadata": {},
    "outputs": [],
@@ -217,13 +197,11 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "df = pd.read_csv(\n",
     "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\LSTMProduct1.csv\"\n",
     ")\n",
     "\n",
     "\n",
-    "# Model, RAM ve Hafıza'yı ayıklayan yardımcı fonksiyon\n",
     "def extract_product_name(description):\n",
     "    try:\n",
     "      \n",
@@ -237,8 +215,7 @@
     "    except:\n",
     "        return \"\"\n",
     "\n",
-    "df[\"Price\"] = df[\"Price\"].astype(str).str.split(\".\").str[0]  # Fiyatı tam sayıya çevir\n",
-    "# Yeni kolonu oluştur\n",
+    "df[\"Price\"] = df[\"Price\"].astype(str).str.split(\".\").str[0]\n",
     "df[\"Model\"] = df[\"Model\"]+\" \"+df[\"Description\"].apply(extract_product_name)\n",
     "\n",
     "df.to_csv(\"product_specs_en1.csv\", index=False)"
@@ -282,36 +259,31 @@
     "        return np.array(x), np.array(y)\n",
     "\n",
     "    def evaluate_model_metrics(self, product_id):\n",
-    "        # Dosyalar kontrol ediliyor\n",
     "        if not os.path.exists(self.model_path) or not os.path.exists(self.scaler_path):\n",
-    "            raise FileNotFoundError(\"Model veya scaler dosyası bulunamadı.\")\n",
+    "            raise FileNotFoundError(\"Model or scaler file not found!\")\n",
     "\n",
-    "        # Model ve scaler yükleniyor\n",
     "        model = load_model(self.model_path)\n",
     "        with open(self.scaler_path, \"rb\") as f:\n",
     "            scaler = pickle.load(f)\n",
     "\n",
-    "        # Veri yükleniyor\n",
     "        df = self.load_data()\n",
     "        product_df = df[df[\"ProductID\"] == int(product_id)].sort_values(\"RecordDate\")\n",
     "\n",
     "        if len(product_df) < self.look_back + 1:\n",
-    "            raise ValueError(\"Değerlendirme için yeterli veri yok.\")\n",
+    "            raise ValueError(\"Insufficient data\")\n",
     "\n",
     "        prices = product_df[\"Price\"].values.reshape(-1, 1)\n",
     "        prices_scaled = scaler.transform(prices)\n",
     "        x, y_scaled = self.prepare_sequences(prices_scaled)\n",
     "\n",
-    "        # Tahmin yapılıyor\n",
     "        y_pred_scaled = model.predict(x, verbose=0)\n",
     "        y_true = scaler.inverse_transform(y_scaled)\n",
     "        y_pred = scaler.inverse_transform(y_pred_scaled)\n",
     "\n",
-    "        # MAE hesapla\n",
+    "\n",
     "        mae = mean_absolute_error(y_true, y_pred)\n",
     "\n",
-    "        # MAPE ve accuracy hesapla\n",
-    "        epsilon = 1e-8  # sıfıra bölme hatası için\n",
+    "        epsilon = 1e-8  \n",
     "        mape = np.mean(np.abs((y_true - y_pred) / (y_true + epsilon))) * 100\n",
     "        accuracy = 100 - mape\n",
     "\n",
@@ -356,9 +328,7 @@
     "from keras.layers import LSTM, Dense\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Tarih ve fiyat verisi (örnek)\n",
     "raw_data = pd.read_csv(\"LSTMPriceHistory.csv\", sep=\"\\t\", header=None, names=[\"RecordDate\", \"Price\"])\n",
-    "# Veri işleme\n",
     "lines = [line.strip() for line in raw_data.strip().split(\"\\n\")]\n",
     "records = []\n",
     "for line in lines:\n",
@@ -372,13 +342,11 @@
     "\n",
     "df = pd.DataFrame(records, columns=[\"RecordDate\", \"Price\"])\n",
     "\n",
-    "# Eksik veriler yerine sabit fiyatlar ekle (örnekleme amacıyla)\n",
     "while len(df) < 100:\n",
     "    last_date = df.iloc[-1][\"RecordDate\"]\n",
     "    next_date = last_date + pd.Timedelta(days=1)\n",
     "    df = pd.concat([df, pd.DataFrame({\"RecordDate\": [next_date], \"Price\": [df[\"Price\"].iloc[-1] + np.random.uniform(0, 5)]})], ignore_index=True)\n",
     "\n",
-    "# LSTM için veriyi hazırlama\n",
     "scaler = MinMaxScaler()\n",
     "scaled_prices = scaler.fit_transform(df[[\"Price\"]])\n",
     "sequence_length = 10\n",
@@ -390,14 +358,12 @@
     "X, y = np.array(X), np.array(y)\n",
     "X = X.reshape((X.shape[0], X.shape[1], 1))\n",
     "\n",
-    "# LSTM model tanımı\n",
     "model = Sequential()\n",
     "model.add(LSTM(50, activation=\"relu\", input_shape=(sequence_length, 1)))\n",
     "model.add(Dense(1))\n",
     "model.compile(optimizer='adam', loss='mse')\n",
     "model.fit(X, y, epochs=30, verbose=1)\n",
     "\n",
-    "# 15 gün ileriye tahmin\n",
     "forecast = []\n",
     "last_sequence = scaled_prices[-sequence_length:]\n",
     "for _ in range(15):\n",
@@ -406,14 +372,11 @@
     "    forecast.append(pred_scaled)\n",
     "    last_sequence = np.append(last_sequence[1:], [[pred_scaled]], axis=0)\n",
     "\n",
-    "# Skaler ters dönüşüm (normalize → gerçek fiyat)\n",
     "forecast_prices = scaler.inverse_transform(np.array(forecast).reshape(-1, 1)).flatten()\n",
     "\n",
-    "# Tahmini yazdır\n",
     "for i, price in enumerate(forecast_prices, 1):\n",
     "    print(f\"Gün {i}: {price:.2f} TL\")\n",
     "\n",
-    "# Grafik çiz\n",
     "plt.plot(range(1, 16), forecast_prices, marker='o')\n",
     "plt.title(\"15 Günlük LSTM Fiyat Tahmini\")\n",
     "plt.xlabel(\"Gün\")\n",
@@ -546,22 +509,17 @@
     "random.seed(42)\n",
     "\n",
     "def train_and_forecast_lstm(csv_path, product_id, forecast_days=15, sequence_length=10, epochs=30):\n",
-    "    # CSV'den veriyi oku\n",
     "    df_raw = pd.read_csv(csv_path)\n",
     "    \n",
-    "    # productID filtresi\n",
     "    df_product = df_raw[df_raw['ProductID'] == product_id].copy()\n",
     "    \n",
-    "    # Tarih formatı varsa datetime yap (tarih string formatını uygun şekilde ayarla)\n",
     "    if df_product['RecordDate'].dtype == object:\n",
     "        df_product['RecordDate'] = pd.to_datetime(df_product['RecordDate'], dayfirst=True, errors='coerce')\n",
     "    \n",
     "    df_product = df_product.dropna(subset=['RecordDate', 'Price'])\n",
     "    \n",
-    "    # Tarihe göre sırala\n",
     "    df_product = df_product.sort_values('RecordDate').reset_index(drop=True)\n",
     "    \n",
-    "    # Eğer veri çok azsa, eksik günleri fiyatın son değerini kullanarak doldurabiliriz\n",
     "    while len(df_product) < 100:\n",
     "        last_date = df_product.iloc[-1]['RecordDate']\n",
     "        next_date = last_date + pd.Timedelta(days=1)\n",
@@ -572,11 +530,9 @@
     "            'Price': [last_price + np.random.uniform(0, 5)]\n",
     "        })], ignore_index=True)\n",
     "    \n",
-    "    # Fiyatları ölçeklendir\n",
     "    scaler = MinMaxScaler()\n",
     "    scaled_prices = scaler.fit_transform(df_product[['Price']])\n",
     "    \n",
-    "    # Eğitim verisi hazırla\n",
     "    X, y = [], []\n",
     "    for i in range(len(scaled_prices) - sequence_length):\n",
     "        X.append(scaled_prices[i:i+sequence_length])\n",
@@ -584,16 +540,13 @@
     "    X, y = np.array(X), np.array(y)\n",
     "    X = X.reshape((X.shape[0], X.shape[1], 1))\n",
     "    \n",
-    "    # Model oluştur\n",
     "    model = Sequential()\n",
     "    model.add(LSTM(50, activation='relu', input_shape=(sequence_length, 1)))\n",
     "    model.add(Dense(1))\n",
     "    model.compile(optimizer='adam', loss='mse')\n",
     "    \n",
-    "    # Modeli eğit\n",
     "    model.fit(X, y, epochs=epochs, verbose=1)\n",
     "    \n",
-    "    # Tahmin yap (forecast_days kadar)\n",
     "    forecast = []\n",
     "    last_sequence = scaled_prices[-sequence_length:]\n",
     "    for _ in range(forecast_days):\n",
@@ -602,15 +555,12 @@
     "        forecast.append(pred_scaled)\n",
     "        last_sequence = np.append(last_sequence[1:], [[pred_scaled]], axis=0)\n",
     "    \n",
-    "    # Skaler ters dönüşüm\n",
     "    forecast_prices = scaler.inverse_transform(np.array(forecast).reshape(-1, 1)).flatten()\n",
     "    \n",
-    "    # Sonuçları yazdır\n",
     "    print(f\"ProductID: {product_id} için {forecast_days} günlük tahmin:\")\n",
     "    for i, price in enumerate(forecast_prices, 1):\n",
     "        print(f\"Gün {i}: {price:.2f} TL\")\n",
     "    \n",
-    "    # Grafik çiz\n",
     "    plt.plot(range(1, forecast_days + 1), forecast_prices, marker='o')\n",
     "    plt.title(f\"{product_id} - {forecast_days} Günlük LSTM Fiyat Tahmini\")\n",
     "    plt.xlabel(\"Gün\")\n",
@@ -618,7 +568,6 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "# Kullanım örneği\n",
     "train_and_forecast_lstm(\"LSTMPriceHistory.csv\", product_id=854787)\n"
    ]
   },
@@ -631,7 +580,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Türkçe key -> İngilizce key sözlüğü\n",
     "tr_to_en = {\n",
     "    \"Model\": \"Model\",\n",
     "    \"Ekran Boyutu\": \"Display Size\",\n",
@@ -665,19 +613,16 @@
     "            new_parts.append(part.strip())\n",
     "    return \"; \".join(new_parts)\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "df = pd.read_csv(\"orijinal.csv\")\n",
     "\n",
-    "# Description kolonundaki Türkçe keyleri İngilizce'ye çevir\n",
     "df[\"Description\"] = df[\"Description\"].apply(lambda x: translate_description(x, tr_to_en))\n",
     "\n",
-    "# Yeni CSV dosyasını kaydet\n",
     "df.to_csv(\"yeni_english_description.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1ab2475d",
    "metadata": {},
    "outputs": [
@@ -713,25 +658,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Excel dosyasını oku (örnek dosya yolu: \"kur_verisi.xlsx\")\n",
     "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\")  # openpyxl yüklü olmalı\n",
     "\n",
-    "# Tarih formatını düzgün şekilde dönüştür\n",
     "df['RecordDate'] = pd.to_datetime(df['RecordDate'], dayfirst=True, errors='coerce')\n",
     "\n",
-    "# Tarihe göre sırala (bazı hücreler NaT olabilir, onları sona atar)\n",
     "df = df.sort_values('RecordDate').reset_index(drop=True)\n",
     "\n",
-    "# Eksik kurları bir önceki değerle doldur (hafta sonlarını da dahil)\n",
     "df['CurrencyRate'] = df['CurrencyRate'].fillna(method='ffill')\n",
     "\n",
-    "# GG.AA.YYYY formatına çevir\n",
     "df['RecordDate'] = df['RecordDate'].dt.strftime('%d.%m.%Y')\n",
     "\n",
-    "# Sonuçları yazdır veya kaydet\n",
     "print(df)\n",
     "\n",
-    "# Excel'e kaydetmek istersen\n",
     "df.to_csv(\"duzenlenmis_kur.csv\", index=False)\n"
    ]
   }
