--- a/AI/utils/notebooks/rf.ipynb
+++ b/AI/utils/notebooks/rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0d46c314",
    "metadata": {},
    "outputs": [
@@ -18,12 +18,10 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Giriş dosyası\n",
     "input_file = (\n",
     "    r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMProduct2.csv\"\n",
     ")\n",
     "\n",
-    "# Türkçe → İngilizce kolon çevirisi\n",
     "column_mapping = {\n",
     "    \"Ekran Boyutu\": \"Display Size\",\n",
     "    \"Ekran Teknolojisi\": \"Display Technology\",\n",
@@ -40,7 +38,6 @@
     "    \"Price\": \"Price\",\n",
     "}\n",
     "\n",
-    "# CSV'yi oku\n",
     "if not os.path.exists(input_file):\n",
     "    raise FileNotFoundError(f\"Giriş dosyası bulunamadı: {input_file}\")\n",
     "\n",
@@ -49,7 +46,6 @@
     "if \"Description\" not in df.columns:\n",
     "    raise KeyError(\"CSV dosyasında 'Description' sütunu bulunamadı.\")\n",
     "\n",
-    "# Description kolonunu parse et ve yeni sütunları oluştur\n",
     "parsed_data = []\n",
     "for _, row in df.iterrows():\n",
     "    description = str(row.get(\"Description\", \"\"))\n",
@@ -65,13 +61,10 @@
     "\n",
     "    parsed_data.append(specs)\n",
     "\n",
-    "# Yeni kolonlar olarak ekle\n",
     "parsed_df = pd.DataFrame(parsed_data)\n",
     "\n",
-    "# Orijinal DataFrame'e join et (index üzerinden hizalanır)\n",
     "df_updated = pd.concat([df, parsed_df], axis=1)\n",
     "\n",
-    "# Kaydet\n",
     "df_updated.to_csv(\"hello.csv\", index=False, encoding=\"utf-8-sig\")\n",
     "print(\n",
     "    \"✔ Dosya mevcut kolonlar korunarak ve Description bilgileri ayrılarak kaydedildi.\"\n",
@@ -80,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3617b8e2",
    "metadata": {},
    "outputs": [
@@ -96,35 +89,29 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "# Dosya yolları\n",
     "input_file = (\n",
     "    r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\hello.csv\"\n",
     ")\n",
     "output_file = \"productDetail_updated.csv\"\n",
     "\n",
-    "# Dosyayı oku\n",
     "df = pd.read_csv(input_file)\n",
     "\n",
-    "# Eksik verileri 0 ile doldur\n",
     "df.fillna(0, inplace=True)\n",
     "\n",
     "\n",
-    "# IPX / IP değerlerinden rakamı çek\n",
     "def extract_ipx_number(value):\n",
     "    if isinstance(value, str):\n",
-    "        match = re.search(r\"\\d+\", value)  # ilk gördüğü sayıyı alır\n",
+    "        match = re.search(r\"\\d+\", value) \n",
     "        if match:\n",
     "            return int(match.group())\n",
     "    return 0\n",
     "\n",
     "\n",
-    "# Uygula: Suya ve Toza Dayanıklılık kolonlarına\n",
     "if \"Suya dayanıklılık\" in df.columns:\n",
     "    df[\"Waterproof\"] = df[\"Suya dayanıklılık\"].apply(extract_ipx_number)\n",
     "if \"Toza dayanıklılık\" in df.columns:\n",
     "    df[\"Dustproof\"] = df[\"Toza dayanıklılık\"].apply(extract_ipx_number)\n",
     "\n",
-    "# Orijinal kolonları isteğe bağlı olarak silebilirsin\n",
     "# df.drop(columns=[\"Suya dayanıklılık\", \"Toza dayanıklılık\"], inplace=True)\n",
     "\n",
     "# Kaydet\n",
@@ -143,18 +130,14 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "df = pd.read_csv(\n",
     "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\product_specs_en.csv\"\n",
     ")\n",
     "\n",
-    "# Sadece sayısal sütunları seç\n",
     "numeric_df = df.select_dtypes(include=['int64', 'float64'])\n",
     "\n",
-    "# Korelasyon matrisini hesapla\n",
     "corr = numeric_df.corr()\n",
     "\n",
-    "# Korelasyon ısı haritası çizimi\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(corr, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=0.5)\n",
     "plt.title(\"Telefon Özellikleri Sayısal Değişkenler Korelasyon Matrisi\")\n",
@@ -276,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "88dac132",
    "metadata": {},
    "outputs": [
@@ -299,24 +282,19 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# 1. Tüm telefonları içeren dosyayı oku\n",
     "all_df = pd.read_csv(\n",
     "    r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\productDetail_updated.csv\"\n",
     ")\n",
     "\n",
-    "# 2. Sadece iOS olanları filtrele\n",
     "ios_df = all_df[all_df[\"Operating System\"] == \"iOS\"]\n",
     "\n",
-    "# 3. Hedef dosya varsa oku, yoksa boş bir DataFrame oluştur\n",
     "try:\n",
     "    target_df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\ProductnEW.csv\")\n",
     "except FileNotFoundError:\n",
     "    target_df = pd.DataFrame(columns=all_df.columns)\n",
     "\n",
-    "# 4. Yeni iOS verilerini hedef dosyaya ekle (varsa tekrar edenleri engellemek için concat + drop_duplicates)\n",
     "merged_df = pd.concat([target_df, ios_df], ignore_index=True).drop_duplicates()\n",
     "merged_df.drop_duplicates()\n",
-    "# 5. Güncellenmiş ios_only.csv dosyasını kaydet\n",
     "merged_df.to_csv(\"Product.csv\", index=False, encoding=\"utf-8-sig\")\n",
     "\n",
     "print(\"✔ iOS telefonlar başarıyla ios_only.csv dosyasına eklendi.\")"
@@ -344,13 +322,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV dosyasını oku\n",
     "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
     "\n",
-    "# Operating System sütunu iOS olanları filtrele (drop et)\n",
     "df = df[df[\"Operating System\"] != \"iOS\"]\n",
     "\n",
-    "# Yeni CSV olarak kaydet\n",
     "df.to_csv(\"product_without_ios.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
@@ -379,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e5496069",
    "metadata": {},
    "outputs": [
@@ -407,24 +382,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV dosyalarını oku\n",
     "df_products = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMPriceHistory.csv\")\n",
     "df_currency = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\currencyRates.csv\")\n",
     "\n",
-    "# Tarih formatlarını güvenli şekilde dönüştür\n",
     "df_products[\"RecordDate\"] = pd.to_datetime(df_products[\"RecordDate\"], dayfirst=True, errors=\"coerce\")\n",
     "df_currency[\"RecordDate\"] = pd.to_datetime(df_currency[\"RecordDate\"], dayfirst=True, errors=\"coerce\")\n",
     "\n",
-    "# Geçerli tarihleri al, eşleştir\n",
     "merged_df = pd.merge(df_products, df_currency, on=\"RecordDate\", how=\"left\")\n",
     "\n",
-    "# Tarihi tekrar GG.AA.YYYY olarak göster (isteğe bağlı)\n",
     "merged_df[\"RecordDate\"] = merged_df[\"RecordDate\"].dt.strftime(\"%d.%m.%Y\")\n",
     "\n",
-    "# Sonucu yazdır\n",
     "print(merged_df.head())\n",
     "\n",
-    "# Yeni CSV olarak kaydetmek istersen:\n",
     "merged_df.to_csv(\"products_with_currency.csv\", index=False)\n"
    ]
   }
@@ -445,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
